# textstats

./: ISSUE.md  README.md  pyproject.toml  run_tests.sh
tests/: test_cli.py  test_core.py
textstats/: __init__.py  __main__.py  averages.py  core.py  models.py  policy.py  profile.py  report.py  sentences.py  tokenize.py
